[tool.poetry]
name = "SpaceInvaders"
version = "0.1.0"
description = ""
authors = ["Simone Casolo <simone.casolo@cognite.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pip = "^21.1"
tensorflow = "2.3.1"
gym = {extras = ["atari"], version = "^0.18.0"}

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.9.1"
mypy = "^0.812"
black = "^20.8b1"
isort = "^5.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
